--- a/src/html/apps.html
+++ b/src/html/apps.html
@@ -1,18 +1,37 @@
-<table>
+<!doctype html>
+<html lang="en">
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+</head>
+<body>
+<table class="table table-striped table-hover table-sm">
+<thead class="thead-dark">
+	<tr><th>libraries</th>{{range .AppView}}<th>{{.Name}}</th>{{end}}</tr>
+</thead>
+<tbody>
+{{- $appView := .AppView }}
+{{- range $lib := .LibView }}
 <tr>
-	<td>apps</td>
-	{{ range $key, $value := .AppsMap -}}
-		<td>{{ $key }}</td>
-	{{ end -}}
+	<td><b>{{ $lib.Name }}</b> <small>{{ $lib.Hints }}</small></td>
+	{{- range $app := $appView }}
+		{{- $appLib := index $app.Libs $lib.Name }}
+		<td class="{{$appLib.Class}}" data-toggle="tooltip" title="{{$appLib.Title}}">{{$appLib.Version}}</td>
+	{{- end }}
 </tr>
-{{ range $pkg := .SortedPkgsKeys -}}
-<tr>
-	<td>{{ $pkg }}</td>
-	{{ range $key, $value := .AppsMap -}}
-		<td>{{ index $value $pkg | .Version }}</td>
-	{{ end -}}
-</tr>
-{{ end -}}
+	{{- end }}
+</tbody>
 </table>
-
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<script>
+$(function () {
+  $('[data-toggle="tooltip"]').tooltip()
+})
+</script>
+</table>
+</body>
+</html>
 
